eks/dev/kubenets-deployment/hondapod.yaml
apiVersion:	v1
kind: Pod
metadata:
  name: hondapod
  namespace: hondans
spec: 
  containers:
  - name: hondacontainer
    image: sudarshanlnx/farmfresh:v1
    imagePullPolicy: IfNotPresent
    ports:
    - name: apache
      containerPort: 80
      protocol: TCP
    resources:
      requests:
        memory: "100Mi"
        cpu: "250m"
      limits:
        memory: "200Mi"
        cpu: "500m"
  restartPolicy: Always
