eks/dev/kubenets-deployment/webcon.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: devproject
spec:
  replicas: 1
  selector:
    matchLabels:
      apptype: web
      env: dev
  template:
    metadata:
      labels:
        apptype: web
        env: dev
    spec:
      containers:
        - name: webcon
          image: sudarshanlnx/twotier:latest
          imagePullPolicy: Always
          ports:
            - name: tomcat
              containerPort: 8080
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: websvc
  namespace: devproject
spec:
  selector:
    apptype: web
    env: dev
  ports:
    - name: tomcat
      port: 80
      targetPort: 8080
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webingress
  namespace: devproject
spec:
  rules:
    - host: "www.akilash.tk"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: websvc
                port:
                  number: 80
